@@ -543,6 +543,14 @@ If this triangulation has no boundary facets (even if it _does_ have
 ideal boundary components, then the result will simply be two disjoint
 copies of this original triangulation.
 
+If this triangulation has locks on any top-dimensional simplices
+and/or their facets, then these locks will be duplicated alongside
+their corresponding simplices and/or facets (i.e., they will appear in
+both copies of the original triangulation). Any locks on boundary
+facets will _not_ prevent this operation from completing successfully
+(i.e., they will not prevent the two copies *S* and *T* from being
+glued together).
+
 Returns:
     two copies of this triangulation joined along their boundary
     facets.)doc";
