@@ -752,6 +752,8 @@ Version 7.4  [ (to be announced) ]
                 move performed.
             - New routines isOneEfficient() and knowsOneEfficient().  For now,
               1-efficiency testing is only available for ideal triangulations.
+            - New routine truncate(), which allows you to truncate a single
+              given vertex.
             - Renamed intelligentSimplify() to simplify().  The old name is
               kept as a deprecated alias.
             - Routine puncture() now takes an optional triangle, not an
